src/objects/LeanData__Upload_Lead__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__CSV_Job_Id__c</fullName>
        <label>CSV Job Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__CSV_Row_Id__c</fullName>
        <externalId>true</externalId>
        <label>CSV Row Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Country__c</fullName>
        <label>Related Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__DupeContact__c</fullName>
        <label>Duplicate Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__DupeLead__c</fullName>
        <label>Duplicate Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Dupe_Contact_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dupe Contact Lookup</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>LA Dupe Contact Lookup</relationshipLabel>
        <relationshipName>LA_Dupe_Contact_Lookup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Dupe_Lead_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dupe Lead Lookup</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>LA Dupe Lead Lookup</relationshipLabel>
        <relationshipName>LA_Dupe_Lead_Lookup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LeanData__FirstName__c</fullName>
        <label>FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__LastName__c</fullName>
        <label>LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__NewLead__c</fullName>
        <defaultValue>true</defaultValue>
        <label>New Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__OtherValues__c</fullName>
        <label>Other Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LeanData__PostalCode__c</fullName>
        <label>PostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Rel_Account_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account Lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Lookup</relationshipLabel>
        <relationshipName>Account_Lookup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Rel_Lead_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Lead Lookup</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>LA Related Lead Lookup</relationshipLabel>
        <relationshipName>LA_Related_Lead_Lookup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__RelatedAccount__c</fullName>
        <label>Related Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__RelatedLead__c</fullName>
        <label>Related Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Source_Id__c</fullName>
        <label>Source Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Website__c</fullName>
        <label>Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Upload Lead</label>
    <nameField>
        <label>Upload Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Upload Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>